<resources>
    <string name="app_name">EMI Calculator</string>
    <string name="zero">Zero</string>
    <string name="org_name">NR INFOTECH PVT LTD</string>
    <string name="org_add_l1">Address Line 1, Address Line 2</string>
    <string name="org_add_l2">Address Line 2</string>
    <string name="org_add_full">Distt. Jhunjhunu, Rajasthan, PIN 333029</string>
    <string name="org_add_l3">Distt. Jhunjhunu, Rajasthan,</string>
    <string name="mail1">support@mail.com, help@mail.com</string>
    <string name="mail2">Help@gmail.com</string>
    <string name="mobile1">Mobile No.: +91–99999–99999</string>
    <string name="mobile2">88888–88888</string>
    <string name="country_code">+91-</string>
    <string name="send_whatsapp">Send WhatsApp</string>
    <string name="cash_calculator">Cash Calculator</string>
    <string name="emi_calculator">EMI Calculator</string>
    <string name="interest_calculator">Interest Calculator</string>
    <string name="welcome_msg">Hi, Welcome to our new apps that is useful for your daily life . Please share it to your friends and family as many as you can. Thanks You.</string>
    <string name="menu">menu</string>
    <string-array name="duration_type_array">
        <item>Years</item>
        <item>Months</item>
    </string-array>

</resources>